welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: type mismatch;
 found   : Int
 required: String
			marqueSol((j+getMondeHauteur()-1)%decalage);
                                                    ^